# AM13E2

./: .gitignore  .gitignore-large  000000  000000.pub  111.txt  2025.8.8  222.txt  README.md  bigfiles.txt  ceshi.txt  environment-setup-aarch64-poky-linux  makefile  makefile.linux  melbank  mips.py  onnx_image.py  prior.txt  readme.md  rk3576_toolchain.lua  run.sh  xmake.lua.android.64  xmake.lua.android.x86_64  xmake.lua.pc  xmake_3576.lua
doc/: lex.md  ques_or_notes.md
makefiles/: makefile.3308.32  makefile.3308.64  makefile.3308.802a  makefile.3308.am13e2  makefile.3308.am32  makefile.3308.am60  makefile.3308.bmc12  makefile.3308.lixun.32  makefile.3308.lixun.64  makefile.3308.lx  makefile.3308.ruishengke  makefile.3308.sizheng  makefile.3308.tianmin  makefile.3308.xdw  (+30 more)
qtk/nn/: BUILD.gn  neon_mathfun.h  neon_mathfun_tanh.h  qtk_nn_abs.h  qtk_nn_add.h  qtk_nn_alignblockoneframe.h  qtk_nn_allocator.h  qtk_nn_atan.h  qtk_nn_batchnormalization.h  qtk_nn_cast.h  qtk_nn_clip.h  qtk_nn_concat.h  qtk_nn_constant_of_shape.h  qtk_nn_conv.h  qtk_nn_conv1d.h  qtk_nn_conv1d_quant.h  qtk_nn_conv2d.h  qtk_nn_conv2d_quant.h  qtk_nn_convq.h  qtk_nn_convtranspose.h  qtk_nn_cos.h  qtk_nn_debug.c  qtk_nn_debug.h  qtk_nn_div.h  qtk_nn_equal.h  qtk_nn_erb.h  qtk_nn_exp.h  qtk_nn_expand.h  qtk_nn_gather.h  qtk_nn_gather_elements.h  qtk_nn_gemm.h  qtk_nn_greater.h  qtk_nn_greater_or_equal.h  qtk_nn_gru.h  qtk_nn_im2col.h  qtk_nn_im2col_quant.h  qtk_nn_less.h  qtk_nn_log.h  qtk_nn_log_softmax.h  qtk_nn_matmul.h  (+38 more)
qtk/nn/vm/: qtk_nn_vm.c  qtk_nn_vm.h  qtk_nn_vm_tensor.c  qtk_nn_vm_tensor.h
(+3657 files in other folders)
